Переписал почти весь about

--- a/source/index.html
+++ b/source/index.html
@@ -98,16 +98,16 @@
         <p class="featured__text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах</p>
         <table class="featured__table">
           <tr class="featured__row">
-            <td class="featured__col">Цвет:</td>
-            <td class="featured__col">&#171;Тифани&#187;/серый</td>
+            <td class="featured__description">Цвет:</td>
+            <td class="featured__item">&#171;Тифани&#187;/серый</td>
           </tr>
           <tr class="featured__row">
-            <td class="featured__col">Диаметр:</td>
-            <td class="featured__col">25 см</td>
+            <td class="featured__description">Диаметр:</td>
+            <td class="featured__item">25 см</td>
           </tr>
           <tr class="featured__row">
-            <td class="featured__col">Высота:</td>
-            <td class="featured__col">15 см</td>
+            <td class="featured__description">Высота:</td>
+            <td class="featured__item">15 см</td>
           </tr>
         </table>
         <!-- <img class="featured__basket-image" src="img/triple-set-desktop.jpg" width="260" height="315" alt="Вязаные корзиночки"> -->
@@ -116,7 +116,9 @@
       </section>
     </div>
     <section class="about">
-      <h2 class="about__title">Коротко о нас:</h2>
+      <div class="about__title-wrapper">
+        <h2 class="about__title">Коротко о нас:</h2>
+      </div>
       <ul class="about__list">
         <li class="about__item about__item--eco-order">
           <div class="about__svg">
