--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,7 @@
         <table class="featured__table">
           <tr class="featured__row">
             <td class="featured__description">Цвет:</td>
-            <td class="featured__item">&#171;Тифани&#187;/серый</td>
+            <td class="featured__item featured__item--color">&#171;Тифани&#187;/серый</td>
           </tr>
           <tr class="featured__row">
             <td class="featured__description">Диаметр:</td>
@@ -117,11 +117,11 @@
     </div>
     <section class="about">
       <div class="about__title-wrapper">
-        <h2 class="about__title">Коротко о нас:</h2>
+        <h2 class="about__title about__title--about">Коротко о нас:</h2>
       </div>
       <ul class="about__list">
         <li class="about__item about__item--eco-order">
-          <div class="about__svg">
+          <div class="about__svg about__svg--eco">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="31.972px" height="37.301px" viewBox="8.014 4.35 31.972 37.301" enable-background="new 8.014 4.35 31.972 37.301" xml:space="preserve">
   <path fill="#231F20" d="M24,41.65c8.827,0,15.986-7.159,15.986-15.986C31.158,25.664,24,32.822,24,41.65z M12.641,20.78 c0,2.451,1.989,4.441,4.44,4.441c0.932,0,1.803-0.294,2.513-0.782l-0.036,0.337c0,2.451,1.99,4.441,4.441,4.441 s4.44-1.99,4.44-4.441l-0.036-0.337c0.719,0.497,1.582,0.782,2.514,0.782c2.451,0,4.44-1.99,4.44-4.441 c0-1.768-1.038-3.286-2.54-3.997c1.492-0.71,2.54-2.229,2.54-3.997c0-2.451-1.989-4.44-4.44-4.44c-0.932,0-1.803,0.293-2.514,0.781 L28.44,8.79c0-2.451-1.989-4.44-4.44-4.44s-4.441,1.99-4.441,4.44l0.036,0.337c-0.719-0.497-1.581-0.781-2.513-0.781 c-2.451,0-4.44,1.99-4.44,4.44c0,1.768,1.039,3.286,2.54,3.997C13.68,17.494,12.641,19.012,12.641,20.78z M24,12.343 c2.451,0,4.44,1.989,4.44,4.44c0,2.451-1.989,4.44-4.44,4.44s-4.441-1.99-4.441-4.44C19.559,14.332,21.549,12.343,24,12.343z  M8.014,25.664c0,8.827,7.158,15.986,15.986,15.986C24,32.822,16.842,25.664,8.014,25.664z"/>
 </svg>
@@ -131,7 +131,7 @@
           </a>
         </li>
         <li class="about__item about__item--scandinavian-order">
-          <div class="about__svg">
+          <div class="about__svg about__svg--scandinavian">
             <svg version="1.1" id="Money" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="46.575px" height="27.332px" viewBox="46.212 56.834 46.575 27.332" enable-background="new 46.212 56.834 46.575 27.332" xml:space="preserve">
   <path d="M88.882,56.834H50.116c-2.156,0-3.904,1.749-3.904,3.905v19.521c0,2.156,1.748,3.905,3.904,3.905h38.766 c2.156,0,3.905-1.749,3.905-3.905V60.739C92.787,58.583,91.038,56.834,88.882,56.834z M49.235,81.784V59.551h40.202v22.233H49.235z" />
   <path d="M53.14,77.88h32.395V63.456H53.14V77.88z M69.5,65.354c2.936,0,5.315,2.38,5.315,5.314c0,2.936-2.379,5.314-5.315,5.314 s-5.314-2.379-5.314-5.314C64.185,67.733,66.564,65.354,69.5,65.354z"/>
@@ -142,7 +142,7 @@
           </a>
         </li>
         <li class="about__item about__item--more-like-order">
-          <div class="about__svg">
+          <div class="about__svg about__svg--like">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="33.05px" height="27.857px" viewBox="47.475 50.071 33.05 27.857" enable-background="new 47.475 50.071 33.05 27.857" xml:space="preserve">
   <path fill="#231F20" d="M80.525,58.808c0-4.825-3.912-8.736-8.736-8.736c-3.405,0-6.348,1.951-7.789,4.793 c-1.441-2.842-4.384-4.793-7.789-4.793c-4.825,0-8.736,3.911-8.736,8.736c0,9.127,14.657,19.121,16.525,19.121 C65.869,77.929,80.525,67.979,80.525,58.808z"/>
 </svg>
@@ -152,7 +152,7 @@
           </a>
         </li>
         <li class="about__item about__item--handmade-order">
-          <div class="about__svg">
+          <div class="about__svg about__svg--handmade">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="34.373px" height="34.373px" viewBox="0 0 34.373 34.373" enable-background="new 0 0 34.373 34.373" xml:space="preserve">
   <g>
     <path d="M0.286,14.069c-0.382,2.073-0.384,4.211,0.008,6.301l4.121-3.21L0.286,14.069z"/>
@@ -176,7 +176,7 @@
           </a>
         </li>
         <li class="about__item about__item--local-order">
-          <div class="about__svg">
+          <div class="about__svg about__svg--local">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="54.156px" height="23.183px" viewBox="612.532 500.386 54.156 23.183" enable-background="new 612.532 500.386 54.156 23.183" xml:space="preserve">
   <g>
     <path d="M652.844,506.098c-3.647-0.971-7.839-1.667-12.359-1.666c-2.891,0.001-5.457,0.243-7.71,0.623l-6.784-4.668l-13.456,0.005 l5.811,6.184h8.447c-4.58,1.598-6.759,3.515-6.759,3.515l0.002,3.777c0,0,2.313,1.912,6.931,3.518l-8.623-0.005l-5.811,6.188 l13.455,0.002l6.816-4.692c2.261,0.398,4.822,0.647,7.681,0.648c4.522-0.001,8.712-0.697,12.36-1.667 c-1.176-1.775-1.915-3.743-1.918-5.877C650.93,509.842,651.665,507.871,652.844,506.098z"/>
@@ -189,7 +189,7 @@
           </a>
         </li>
         <li class="about__item about__item--present-order">
-          <div class="about__svg">
+          <div class="about__svg about__svg--present">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32.666px" height="32.486px" viewBox="239.665 239.757 32.666 32.486" enable-background="new 239.665 239.757 32.666 32.486" xml:space="preserve">
   <path fill="#231F20" d="M242.56,272.243h12.504v-13.91H242.56V272.243z M270.742,248.623h-7.335 c0.521-0.267,0.984-0.549,1.396-0.845c1.588-1.133,2.424-2.57,2.42-3.999c0.002-1.169-0.556-2.202-1.359-2.901 c-0.805-0.704-1.869-1.119-3.016-1.121c-1.22-0.001-2.352,0.421-3.32,1.069c-1.459,0.979-2.606,2.451-3.424,4.067 c-0.039,0.079-0.078,0.157-0.115,0.236c-0.299-0.623-0.647-1.226-1.041-1.792c-0.691-0.985-1.523-1.86-2.497-2.511 c-0.97-0.646-2.103-1.069-3.322-1.069c-1.213,0.004-2.323,0.514-3.155,1.295c-0.828,0.783-1.41,1.885-1.412,3.135 c-0.002,0.73,0.211,1.494,0.649,2.188c0.552,0.872,1.424,1.628,2.633,2.248h-6.588c-0.878,0-1.591,0.712-1.591,1.59v5.897h15.396 v-7.488h1.873v7.488h15.396v-5.897C272.333,249.334,271.621,248.623,270.742,248.623 M248.38,246.284 c-0.622-0.391-1-0.785-1.22-1.135c-0.22-0.354-0.294-0.662-0.296-0.963c-0.004-0.504,0.248-1.042,0.691-1.461 c0.437-0.415,1.028-0.667,1.562-0.667h0.013c0.685,0,1.366,0.231,2.046,0.683c1.018,0.671,1.975,1.85,2.645,3.187 c0.342,0.676,0.609,1.39,0.789,2.087C251.528,247.694,249.532,247.013,248.38,246.284 M258.917,244.657 c0.557-0.797,1.21-1.466,1.887-1.916c0.68-0.451,1.362-0.683,2.047-0.683h0.006c0.574,0,1.117,0.22,1.494,0.55 c0.377,0.336,0.571,0.739,0.573,1.171c-0.004,0.512-0.272,1.259-1.467,2.132c-1.138,0.825-3.101,1.673-6.127,2.265 C257.62,246.974,258.177,245.704,258.917,244.657 M256.937,272.243h12.506v-13.91h-12.506V272.243z"/>
 </svg>
@@ -225,73 +225,52 @@
               </a>
             </li>
           </ul>
-          <!-- <table class="about__table">
-            <tr class="about__tr">
-              <td class="about__td">
-                <a href="#" class="about__prev-button"><img class="about__arrow" src="img/icon-left-arrow.svg" alt="Назад"></a>
-              </td>
-              <td class="about__td">
-                <a href="#" class="about__next-button"><img class="about__arrow" src="img/icon-right-arrow.svg" alt="Вперед"></a>
-              </td>
-            </tr>
-          </table> -->
         </div>
         <!-- <a href="add_message.php" class="about__to-write">Написать</a> -->
       </article>
     </section>
     <div class="contacts-wrapper">
       <section class="contacts">
-        <h3 class="contacts__title">
-          <span>Контакты</span>
-          <span class="contacts__flag contacts__flag--display">
-            <img src="img/icon-flag.svg" alt="Флаг">
-          </span>
-        </h3>
-        <ul class="contacts__list">
-          <li class="contacts__item contacts__item--email">
-            <p class="contacts__text">e-mail:</p>
-            <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-          </li>
-          <li class="contacts__item contacts__item--address">
-            <p class="contacts__text">адрес:</p>
-            <p class="contacts__address">
-              г.Санкт-Петербург, ул.Большая&nbsp;Конюшеная, д.19/8, офис 101
-            </p>
-          </li>
-        </ul>
-        <!-- <table class="contacts__table contacts__table--mt">
-          <tbody class="contacts__tbody">
-            <tr class="contacts__row">
-              <td class="contacts__col">
-                <p class="contacts__email">e-mail:</p>
-              </td>
-              <td class="contacts__col">
-                <p class="contacts__email-wrapper">
-                  <a class="contacts__email-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-                </p>
-              </td>
-            </tr>
-            <tr class="contacts__row">
-              <td class="contacts__col">
-                <p class="contacts__address">адрес:</p>
-              </td>
-              <td class="contacts__col">
-                <p class="contacts__address-wrapper">
-                  <span class="contacts__span">г. Санкт-Петербург,</span>
-                  <span class="contacts__span">ул. Большая Конюшеная,</span>
-                  <span class="contacts__span">д.19/8,офис 101</span>
-                </p>
-              </td>
-            </tr>
-          </tbody>
-        </table> -->
+        <div class="contacts__container">
+          <h3 class="contacts__title">
+            <span class="contacts__title-text">Контакты</span>
+            <span class="contacts__flag contacts__flag--display">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="46.68px" height="81.691px" viewBox="-11.34 -28.346 46.68 81.691" enable-background="new -11.34 -28.346 46.68 81.691" xml:space="preserve">
+  <g id="miu">
+    <g id="Artboard-1" transform="translate(-755.000000, -443.000000)">
+      <g id="slice" transform="translate(215.000000, 119.000000)">
+      </g>
+      <g id="editor-flag-triangle-notification-glyph">
+        <path fill="#63D1BB" d="M751.439,418.545v38.9l38.9-19.451L751.439,418.545z M743.66,496.346v-81.691h3.805v81.691H743.66z"/>
+      </g>
+    </g>
+  </g>
+  <g>
+    <rect x="-11.34" y="-28.346" fill="#231F20" width="3.805" height="81.691"/>
+  </g>
+</svg>
+            </span>
+          </h3>
+          <ul class="contacts__list">
+            <li class="contacts__item contacts__item--email">
+              <p class="contacts__text">e-mail:</p>
+              <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+            </li>
+            <li class="contacts__item contacts__item--address">
+              <p class="contacts__text">адрес:</p>
+              <p class="contacts__address">
+                г.Санкт-Петербург, ул.Большая&nbsp;Конюшеная, д.19/8, офис 101
+              </p>
+            </li>
+          </ul>
+          <div class="site__write site__write--wrapper">
+            <a href="write_us_form.html" class="write-us write-us--size">Напишите нам</a>
+          </div>
+        </div>
+      <div class="map">
+        <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705228!2d30.320889251994995!3d59.938794181787244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516865453287" allowfullscreen></iframe>
+      </div>
       </section>
-    </div>
-    <div class="map">
-      <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705228!2d30.320889251994995!3d59.938794181787244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516865453287" allowfullscreen></iframe>
-    </div>
-    <div class="site__write site__write--wrapper">
-      <a href="write_us_form.html" class="write-us write-us--size">Напишите нам</a>
     </div>
     <footer class="main-footer">
       <ul class="main-footer__list">
