--- a/source/index.html
+++ b/source/index.html
@@ -171,7 +171,7 @@
   </g>
 </svg>
           </div>
-          <a href="#" class="about__link">
+          <a href="#" class="about__link about__link--handmade">
             <span class="about__text about__text--handmade">Связано вручную с любовью и умилением</span>
           </a>
         </li>
@@ -184,7 +184,7 @@
   </g>
 </svg>
           </div>
-          <a href="#" class="about__link">
+          <a href="#" class="about__link about__link--local">
             <span class="about__text about__text--local">Поддержка отечественного производителя</span>
           </a>
         </li>
@@ -207,7 +207,7 @@
         <p class="about__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
         <div class="about__comment-wrapper">
           <p class="about__name">
-            <span class="about__span"><b>Анастасия Красильникова</b><a class="about__email" href="#">@misssssiskras</a></span>
+            <span class="about__span"><b>Анастасия Красильникова </b><a class="about__email" href="#">@misssssiskras</a></span>
           </p>
           <ul class="about__list about__list--arrows">
             <li class="about__item about__item--prev">
@@ -259,7 +259,7 @@
             <li class="contacts__item contacts__item--address">
               <p class="contacts__text">адрес:</p>
               <p class="contacts__address">
-                г.Санкт-Петербург, ул.Большая&nbsp;Конюшеная, д.19/8, офис 101
+                г.Санкт-Петербург, ул.Большая Конюшеная, д.19/8, офис 101
               </p>
             </li>
           </ul>
