--- a/source/catalog.html
+++ b/source/catalog.html
@@ -62,67 +62,77 @@
       </nav>
     </header>
     <h2 class="catalog-title">Каталог товаров</h2>
-    <section class="catalog">
-      <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
-      <article class="catalog__item catalog__item--hare">
-        <div class="catalog__image catalog__hare"></div>
-        <div class="catalog-wrapper">
-          <h3 class="catalog__title catalog__title--width">Зайчик-попрыгайчик</h3>
-          <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
-          <div class="catalog__price-wrapper">
-            <p class="catalog__price">1 200 руб.</p>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
-  <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
-</svg>
-          </div>
-        </div>
-      </article>
-      <article class="catalog__item catalog__item--mobile">
-        <div class="catalog__image catalog__basket"></div>
-        <!-- <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
+    <div class="catalog-container">
+      <section class="catalog">
+        <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
+        <article class="catalog__item catalog__item--hare">
+          <div class="catalog__image catalog__hare"></div>
           <div class="catalog-wrapper">
-          <h3 class="catalog__title catalog__title--width">Корзинка для белья</h3>
-          <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
-          <div class="catalog__price-wrapper">
-            <p class="catalog__price">690 руб.</p>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
-  <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
-</svg>
+            <div class="catalog__description-wrapper">
+              <h3 class="catalog__title catalog__title--width">Зайчик-попрыгайчик</h3>
+              <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
+            </div>
+            <div class="catalog__price-wrapper">
+              <p class="catalog__price">1 200 руб.</p>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+    <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
+  </svg>
+            </div>
           </div>
-        </div>
-      </article>
-      <article class="catalog__item catalog__item--mobile">
-        <div class="catalog__image catalog__big-basket"></div>
-        <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
-        <div class="catalog-wrapper">
-          <h3 class="catalog__title catalog__title--width">Большая корзина<br>для игрушек</h3>
-          <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
-          <div class="catalog__price-wrapper catalog__price-wrapper--margin">
-            <p class="catalog__price">1 500 руб.</p>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
-  <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
-</svg>
+        </article>
+        <article class="catalog__item catalog__item--mobile">
+          <div class="catalog__image catalog__basket"></div>
+          <!-- <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
+            <div class="catalog-wrapper">
+            <div class="catalog__description-wrapper">
+              <h3 class="catalog__title catalog__title--width">Корзинка для белья</h3>
+              <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
+            </div>
+            <div class="catalog__price-wrapper">
+              <p class="catalog__price">690 руб.</p>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+    <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
+  </svg>
+            </div>
           </div>
+        </article>
+        <article class="catalog__item catalog__item--mobile">
+          <div class="catalog__image catalog__big-basket"></div>
+          <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
+          <div class="catalog-wrapper">
+            <div class="catalog__description-wrapper">
+              <h3 class="catalog__title catalog__title--width">Большая корзина<br>для игрушек</h3>
+              <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
+            </div>
+            <div class="catalog__price-wrapper catalog__price-wrapper--margin">
+              <p class="catalog__price">1 500 руб.</p>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+    <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
+  </svg>
+            </div>
+          </div>
+        </article>
+        <div class="catalog__films-wrapper">
+          <article class="catalog__films">
+            <div class="catalog__movies catalog__movies--order">
+              <div class="catalog__movie-play"></div>
+            </div>
+            <div class="catalog__film-svg-title">
+              <svg class="catalog__film-svg-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+    <g transform="translate(0 192)">
+      <path d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z"/>
+    </g>
+    </svg>
+              <h3 class="catalog__title catalog__title--film">Процесс производства</h3>
+            </div>
+            <p class="catalog__text catalog__text--film">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
+            <a href="#" class="catalog__to-order">Сделать заказ</a>
+            <!-- <div class="catalog__films-description"> -->
+            </div>
+          </article>
         </div>
-      </article>
-      <article class="catalog__films">
-        <div class="catalog__movies">
-          <div class="catalog__movie-play"></div>
-        </div>
-        <div class="catalog__film-svg-title catalog__film-svg-title--order">
-          <svg class="catalog__film-svg-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
-<g transform="translate(0 192)">
-  <path d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z"/>
-</g>
-</svg>
-          <h3 class="catalog__title catalog__title--width">Процесс производства</h3>
-        </div>
-        <p class="catalog__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
-        <a href="#" class="catalog__to-order">Сделать заказ</a>
-        <!-- <div class="catalog__films-description"> -->
-        </div>
-      </article>
-    </section>
+      </section>
+    </div>
     <footer class="main-footer">
       <ul class="main-footer__list">
         <li class="main-footer__item main-footer__item--logo main-footer__logo main-footer__logo--display">
