Поправил путь к картинке

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -82,8 +82,8 @@
         </article>
         <article class="catalog__item catalog__item--mobile">
           <picture class="catalog__picture">
-            <source media="(min-width: 1250px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, photo-bowl-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, photo-bowl-tablet@2x.jpg 2x">
+            <source media="(min-width: 1250px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
             <img class="catalog__image catalog__bowl" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" width="260" alt="Корзина для белья">
           </picture>
             <div class="catalog-wrapper">
