--- a/source/catalog.html
+++ b/source/catalog.html
@@ -69,7 +69,7 @@
           </picture>
           <div class="catalog-wrapper">
             <div class="catalog__description-wrapper">
-              <h3 class="catalog__title catalog__title--width">Зайчик-попрыгайчик</h3>
+              <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
               <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
             </div>
             <div class="catalog__price-wrapper">
@@ -88,7 +88,7 @@
           </picture>
             <div class="catalog-wrapper">
             <div class="catalog__description-wrapper">
-              <h3 class="catalog__title catalog__title--width">Корзинка для белья</h3>
+              <h3 class="catalog__title">Корзинка для белья</h3>
               <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
             </div>
             <div class="catalog__price-wrapper">
@@ -106,13 +106,13 @@
             <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x, img/photo-hare-mobile@2x.webp 2x"> -->
             <source media="(min-width: 1250px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
-            <img catalog__image catalog__big-basket class="catalog__image catalog__hare" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" width="260" height="195" alt="Зайчик-попрыгайчик">
+            <img class="catalog__image catalog__hare" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" width="260" height="195" alt="Зайчик-попрыгайчик">
           </picture>
           <!-- <div class="catalog__image catalog__big-basket"></div> -->
           <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
           <div class="catalog-wrapper">
             <div class="catalog__description-wrapper">
-              <h3 class="catalog__title catalog__title--width">Большая корзина<br>для игрушек</h3>
+              <h3 class="catalog__title">Большая корзина<br>для игрушек</h3>
               <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
             </div>
             <div class="catalog__price-wrapper catalog__price-wrapper--margin">
@@ -123,23 +123,40 @@
             </div>
           </div>
         </article>
-        <div class="catalog__films-wrapper">
           <article class="catalog__films">
-            <div class="catalog__movies catalog__movies--order">
-              <div class="catalog__movie-play"></div>
-            </div>
+            <picture class="catalog__film-picture">
+              <!-- <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-hare-mobile_1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x, img/photo-hare-mobile@2x.webp 2x"> -->
+              <source media="(min-width: 1250px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img class="catalog__film-image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="260" height="195" alt="Зайчик-попрыгайчик">
+              <div class="catalog__movie-play">
+                <svg version="1.1" id="Laag_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100.678px" height="76.891px" viewBox="247.3 382.56 100.678 76.891" enable-background="new 247.3 382.56 100.678 76.891" xml:space="preserve">
+  <g>
+    <g>
+      <path fill="#63D1BB" d="M344.255,400.708c0,0-0.92-7.008-3.785-10.078c-3.632-4.041-7.674-4.066-9.541-4.297 c-13.326-1.023-33.303-1.023-33.303-1.023h-0.051c0,0-19.978,0-33.304,1.023c-1.867,0.23-5.908,0.256-9.54,4.297 c-2.84,3.096-3.786,10.078-3.786,10.078s-0.896,8.211-0.896,16.422v7.699c0,8.21,0.947,16.421,0.947,16.421 s0.921,7.009,3.785,10.078c3.632,4.041,8.364,3.913,10.487,4.349c7.622,0.767,32.356,1.022,32.356,1.022 s20.003-0.025,33.329-1.048c1.867-0.23,5.908-0.256,9.54-4.298c2.84-3.069,3.786-10.078,3.786-10.078s0.946-8.21,0.946-16.421 v-7.699C345.202,408.919,344.255,400.708,344.255,400.708z"/>
+      <path fill="#FFFFFF" d="M297.614,459.449h-0.016c-1.015-0.011-24.946-0.266-32.604-1.037l-0.14-0.014l-0.137-0.028 c-0.271-0.056-0.668-0.107-1.126-0.167c-2.503-0.328-7.159-0.938-10.839-5.019c-3.354-3.616-4.377-10.771-4.483-11.576 l-0.005-0.043c-0.039-0.342-0.965-8.463-0.965-16.736v-7.699c0-8.266,0.875-16.378,0.912-16.72l0.009-0.071 c0.108-0.802,1.155-7.928,4.474-11.557c3.996-4.439,8.531-4.899,10.712-5.121c0.192-0.02,0.37-0.037,0.529-0.058l0.126-0.013 c13.277-1.019,33.312-1.031,33.514-1.031h0.051c0.201,0,20.236,0.013,33.514,1.031l0.126,0.013 c0.159,0.021,0.337,0.038,0.529,0.058c2.179,0.221,6.71,0.682,10.704,5.112c3.354,3.616,4.377,10.771,4.483,11.577l0.005,0.043 c0.039,0.342,0.965,8.459,0.99,16.753v7.708c0,8.273-0.926,16.395-0.965,16.736l-0.007,0.053 c-0.108,0.805-1.156,7.953-4.478,11.562c-3.994,4.435-8.527,4.896-10.707,5.117c-0.193,0.02-0.371,0.037-0.53,0.057l-0.126,0.013 c-13.276,1.02-33.334,1.057-33.535,1.058L297.614,459.449L297.614,459.449z M265.67,452.952 c7.477,0.729,31.216,0.989,31.968,0.997c0.657-0.001,20.135-0.049,33.047-1.036c0.178-0.021,0.371-0.041,0.58-0.062 c1.836-0.186,4.608-0.468,7.186-3.335l0.026-0.029c1.825-1.974,2.853-6.928,3.075-8.552c0.059-0.514,0.926-8.358,0.926-16.08 v-7.699c-0.023-7.76-0.896-15.627-0.951-16.109c-0.32-2.382-1.434-6.789-3.066-8.539l-0.035-0.038 c-2.577-2.868-5.351-3.149-7.186-3.336c-0.209-0.021-0.402-0.041-0.58-0.062c-13.066-0.998-32.834-1.011-33.033-1.011h-0.051 c-0.198,0-19.967,0.013-33.033,1.011c-0.177,0.021-0.371,0.041-0.58,0.062c-1.835,0.187-4.607,0.468-7.186,3.336l-0.019,0.021 c-1.828,1.993-2.855,6.924-3.082,8.552c-0.062,0.591-0.875,8.399-0.875,16.089v7.699c0,7.749,0.871,15.598,0.926,16.083 c0.32,2.381,1.433,6.789,3.066,8.539l0.035,0.039c2.322,2.584,5.303,2.975,7.479,3.259 C264.788,452.812,265.246,452.872,265.67,452.952z"/>
+    </g>
+  </g>
+  <g>
+    <polygon fill="#FFFFFF" points="285.733,403.138 285.733,438.846 315.48,420.992  "/>
+  </g>
+</svg>
+              </div>
+            </picture>
             <div class="catalog__film-svg-title">
+              <div class="catalog__svg-container">
               <svg class="catalog__film-svg-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
     <g transform="translate(0 192)">
       <path d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z"/>
     </g>
     </svg>
+            </div>
               <h3 class="catalog__title catalog__title--film">Процесс производства</h3>
             </div>
             <p class="catalog__text catalog__text--film">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
             <a href="#" class="catalog__to-order">Сделать заказ</a>
-            <!-- <div class="catalog__films-description"> -->
-            </div>
           </article>
         </div>
       </section>
